voltando para a dev

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="">Sobre</a></li>
         <li><a href="">Portifólio</a></li>
         <!--dois n no login-->
-        <li><a href="loginn.html" class="button" id="abrir-form">Login</a></li>
+        <li><a href="login.html" class="button" id="abrir-form">Login</a></li>
 
       </ul>
     </nav>
